Java, Scala, Kotlin, Groovy, Python, HTTP, REST